--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <title>Document</title>
 </head>
 
-<html>
+
 <header class="header none">
     <div class="container">
         header
     </div>
 </header>
 <main>
-    <section class="hero-section DONE">
+    <section class="hero-section none DONE">
         <div class="container">
             <div class="text_button-container">
                 <h1>Reviving the traditional <span class="yellow">Ukrainian</span> artistry in every stitch.</h1>
@@ -46,7 +46,7 @@
             </div>
         </div>
     </section>
-    <section class="about-us-section  DONE">
+    <section class="about-us-section none DONE">
         <div class="container">
             <div class="about-us_text-section">
                 <h2 class="section-title">About Us</h2>
@@ -79,7 +79,7 @@
             </picture>
         </div>
     </section>
-    <section class="our-collection-section  DONE">
+    <section class="our-collection-section none DONE">
         <div class="container">
             <h2 class="section-title">Our collection</h2>
             <ul class="collection-items">
@@ -116,7 +116,7 @@
             </ul>
         </div>
     </section>
-    <section class="photo-section  DONE">
+    <section class="photo-section none DONE">
         <div class="container">
             <picture>
                 <source media="(min-width: 1440px)" srcset="./img/image_section/image_desk_plus.jpg" type="image/jpg" />
@@ -126,7 +126,7 @@
             </picture>
         </div>
     </section>
-    <section class="order-section  DONE">
+    <section class="order-section none DONE">
         <div class="container">
             <div class="form-container">
                 <h2 class="section-title"><span class="yellow">Your order</span> is our priority: Personalized approach
@@ -153,7 +153,7 @@
             </picture>
         </div>
     </section>
-    <section class="testimonials-section  DONE">
+    <section class="testimonials-section none DONE">
         <div class="container">
             <h2 class="section-title">Testimonials</h2>
             <ul class="testimonials-list">
@@ -194,7 +194,5 @@
     </div>
 </footer>
 <script src="./script.js"></script>
-
-</html>
 
 </html>
